--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Hank Quinlan, Horrible Cop
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
+permalink: /notes/:year/:month/:day/:title
 
 theme: jekyll-theme-minimal
