--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 theme: jekyll-theme-minimal
+title: Portfolio
+author: Thalia Juarez
+email: thalia.juarez@protonmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Data Analytics. Parallel Programming. Applied Statistics. Secure Software.
+
+# social links
+twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  thaliajuarez # DO NOT include the @ character, or else the build will fail!
+
+show_excerpts: true # set to false to remove excerpts on the homepage
