--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: minima
+author: Thalia Juarez
 email: thalia.juarez@protonmail.com
 description: > # this means to ignore newlines until "baseurl:"
   I’m a Computer Science student from Texas. I focus on improving existing software 
