--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: minima
 author: Thalia Juarez
 email: thalia.juarez@protonmail.com
 description: > # this means to ignore newlines until "baseurl:"
