--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,8 @@ author: Thalia Juarez
 email: thalia.juarez@protonmail.com
 description: > # this means to ignore newlines until "baseurl:"
   I’m a Computer Science student from Texas. I focus on improving existing software 
-  for ongoing research projects, data analytics, parallel programming, and exploring
-  new technologies. If I am not building something new or doing homework, I am reading 
-  or playing games.
+  for ongoing research projects, but I like learning new technologies. If I am not 
+  building something new or doing homework, I am reading or playing games.
 
 # social links
 # twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
