--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,6 @@ description: > # this means to ignore newlines until "baseurl:"
 # social links
 # twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  thaliajuarez # DO NOT include the @ character, or else the build will fail!
+linkedin: https://www.linkedin.com/in/thalia-juarez-2268821b5
 
 show_excerpts: true # set to false to remove excerpts on the homepage
