--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 author: Thalia Juarez
 email: thalia.juarez@protonmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  I’m a Computer Science student from Texas. I focus on improving existing software 
+  Hello, I’m Thalia! I am a computer science student from Texas focused on improving existing software 
   for ongoing research projects, but I like learning new technologies. If I am not 
   building something new or doing homework, I am reading or playing games.
 
